--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,8 @@
-# Ignore docs files
-_gh_pages
-_site
-.ruby-version
-.jekyll-cache
+# VuePress default temp directory
+docs/.vuepress/.temp
+# VuePress default cache directory
+docs/.vuepress/.cache
+# VuePress default build output directory
+docs/.vuepress/dist
 
-# Numerous always-ignore extensions
-*.diff
-*.err
-*.orig
-*.log
-*.rej
-*.swo
-*.swp
-*.zip
-*.vi
-*~
-
-# OS or Editor folders
-.DS_Store
-._*
-Thumbs.db
-.cache
-.project
-.settings
-.tmproj
-*.esproj
-nbproject
-*.sublime-project
-*.sublime-workspace
-.idea
-
-# Komodo
-*.komodoproject
-.komodotools
-
-# grunt-html-validation
-validation-status.json
-validation-report.json
-
-# Folders to ignore
 node_modules
-bower_components
